# bevy-moonracer

./: Cargo.toml  README.md  bevy-moonracer-fd2ca33e0a6e6c25.js  flake.nix  index.html
.cargo/: config.toml
assets/: background.wgsl
src/: app_status.rs  audio.rs  events.rs  game_status.rs  gamepad_test.rs  level.rs  level_loader.rs  level_loader_test.rs  lib.rs  main.rs  moonracer.rs  resources.rs  ship.rs  star.rs  test_level_loader.rs  velocity_gizmo.rs  wall.rs
src/entities/: goal.rs  launch_pad.rs  mod.rs  ship.rs  velocity_gizmo.rs  wall.rs
src/resources/: mod.rs  save.rs
src/ui/: background.rs  button.rs  completed.rs  levels.rs  mod.rs  pause.rs
