[package]
name = "bevy-moonracer"
version = "0.1.2"
edition = "2021"
license = "MIT"

[dependencies]
roxmltree = "0.18"
itertools = "0.11"
lazy_static = "*"
gilrs = "*"
serde = "1"

[dependencies.bevy_pkv]
git = "https://github.com/TristanCacqueray/bevy_pkv.git"
branch = "bevy-devel"
default-features = false
features = [ "bevy", "sled" ] # redb do not link with mold: error: undefined symbol: _$LT$redb..tree_store...

[dependencies."bevy-ui-navigation"]
git = "https://github.com/TristanCacqueray/ui-navigation.git"
branch = "bevy-devel"
default-features = false
features = [ "bevy_ui", "bevy_reflect" ]
# Wait for bevy 0.12 release before enabling "pointer_focus"

[dependencies.bevy_wasm_window_resize]
git = "https://github.com/TristanCacqueray/bevy_wasm_window_resize.git"
branch = "bevy-devel"

[dependencies.bevy]
git = "https://github.com/TristanCacqueray/bevy.git"
branch = "wgpu"
default-features = false
features = [
  # core
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "bevy_winit",

  # gamepad
  "bevy_gilrs",

  # native video
  "wayland",

  # audio
  "bevy_audio",
  "vorbis",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
git = "https://github.com/TristanCacqueray/bevy.git"
branch = "wgpu"
default-features = false
features = [
  "dynamic_linking",
  "wayland",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "level"
path = "src/level_loader_test.rs"
doc-scrape-examples = true

[[example]]
name = "gamepad"
path = "src/gamepad_test.rs"
doc-scrape-examples = true
