[package]
name = "bevy-moonracer"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
roxmltree = "0.18"
itertools = "0.11"
lazy_static = "*"
gilrs = "*"
serde = { version = "1", features = ["rc"] }
rodio = { version = "0.17", default-features = false }
funutd = "0.12"

[dependencies.bevy_pkv]
git = "https://github.com/TristanCacqueray/bevy_pkv.git"
rev = "ccf45f16a548b3583a28d1a0337e38cabeb970fc"
default-features = false
features = [ "bevy", "sled" ] # redb do not link with mold: error: undefined symbol: _$LT$redb..tree_store...

[dependencies."bevy-ui-navigation"]
git = "https://github.com/TristanCacqueray/ui-navigation.git"
rev = "0474c3206abb25d234a07af6cf6e1b596a01b449"

[dependencies.bevy_wasm_window_resize]
git = "https://github.com/TristanCacqueray/bevy_wasm_window_resize.git"
rev = "423adf8de011f3cd7da24b1bd1ff3a28d4efaef5"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1"
default-features = false
features = [
  # core
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_text",
  "bevy_sprite",
  "bevy_ui",
  "multi-threaded",
  "bevy_winit",

  # gamepad
  "bevy_gilrs",

  # audio
  "bevy_audio",
  "vorbis",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "35073cf7aa9eaf748e167c103921a6764fcedfb1"
default-features = false
features = [
  "dynamic_linking",
  "wayland",
  "file_watcher",
  "embedded_watcher",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "level"
path = "src/level_loader_test.rs"
doc-scrape-examples = true

[[example]]
name = "gamepad"
path = "src/gamepad_test.rs"
doc-scrape-examples = true
