[package]
name = "bevy-moonracer"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
roxmltree = "0.18"
itertools = "0.11"
lazy_static = "*"
gilrs = "*"
serde = { version = "1", features = ["rc"] }
rodio = { version = "0.17", default-features = false }
funutd = "0.12"

[dependencies.bevy_pkv]
version = "0.9"
default-features = false
features = [ "bevy", "sled" ] # redb do not link with mold: error: undefined symbol: _$LT$redb..tree_store...

[dependencies."bevy-ui-navigation"]
version = "0.33"

[dependencies.bevy_wasm_window_resize]
git = "https://github.com/TristanCacqueray/bevy_wasm_window_resize.git"
rev = "3713dc2a4cedb12e980ebdc79d8485ca18640664"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
  # core
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_text",
  "bevy_sprite",
  "bevy_ui",
  "multi-threaded",
  "bevy_winit",

  # gamepad
  "bevy_gilrs",

  # audio
  "bevy_audio",
  "vorbis",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.12"
default-features = false
features = [
  "dynamic_linking",
  "wayland",
  "file_watcher",
  "embedded_watcher",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "level"
path = "src/level_loader_test.rs"
doc-scrape-examples = true

[[example]]
name = "gamepad"
path = "src/gamepad_test.rs"
doc-scrape-examples = true
